# lockfree-ipc

./: .gitignore  CMakeLists.txt  README.md  ShmFreeChunkList.c  debug.md  demo.c  my_atomic  my_atomic.cpp
include/: SharedMemoryManager.hpp
include/EBRManager/: EBRManager.hpp  GarbageCollector.hpp  GarbageNode.hpp  LockFreeReuseStack.hpp  LockFreeSingleLinkedList.hpp  ThreadHeapAllocator.hpp  ThreadSlot.hpp  ThreadSlotManager.hpp  ebr.hpp
include/Hazard/: AllocatorPolicies.hpp  GCHook.hpp  HazardPointerOrganizer.hpp  HpRetiredManager.hpp  HpRetiredManager_impl.hpp  HpSlot.hpp  HpSlotManager.hpp  HpSlotManagerDetail.hpp  HpSlotManager_impl.hpp
include/LockFreeHashMap/: LockFreeChain.hpp  LockFreeChain.impl.hpp  LockFreeHashMap.hpp  LockFreeHashMap.impl.hpp  LockFreeHashMapNode.hpp
include/LockFreeLinkedList/: LockFreeLinkedList.hpp  LockFreeLinkedList_impl.hpp  LockFreeListNode.hpp
include/LockFreeQueue/: LockFreeQueue.hpp  LockFreeQueue_impl.hpp  QueueNode.hpp
include/LockFreeSkipList/: LockFreeSkipList.hpp  LockFreeSkipListNode.hpp  LockFreeSkipList_impl.hpp
include/LockFreeStack/: HpRetiredManager.hpp  HpRetiredManager_impl.hpp  HpSlot.hpp  HpSlotManager.hpp  HpSlotManagerDetail.hpp  HpSlotManager_impl.hpp  LockFreeStack.hpp  LockFreeStack_impl.hpp  StackNode.hpp
include/LockFreeStack/HazardPointers/: LockFreeIndexStack.hpp
include/LockfreeStack/: LockFreeRetiredList.hpp  LockFreeStack.hpp
include/ShareMemory/: ShareMemoryRegion.hpp  ShmHeader.hpp  ShmResourceManager.hpp  ShmSegment.hpp
include/Tool/: ShmMutexLock.hpp  StampPtr.hpp  StampPtrPacker.hpp  x86_atomic.hpp
include/atomics/: AtomicWrapper.hpp  x86_atomics.hpp
include/gc_malloc/CentralHeap/: AlignedChunkAllocatorByMmap.hpp  CentralHeap.hpp  ChunkAllocatorFromKernel.hpp  FreeChunkCache.hpp  FreeChunkListCache.hpp  FreeChunkManager.hpp  Shm2MBChunkAllocator.hpp  ShmChunkAllocator.hpp  ShmFreeChunkList.hpp  ShmMutexLock.hpp
include/gc_malloc/CentralHeap/sys/: mman.hpp
include/gc_malloc/ThreadHeap/: Bitmap.hpp  BlockHeader.hpp  CentralHeapBootstrap.hpp  ManagedList.hpp  MemSubPool.hpp  MemSubPoolList.hpp  ProcessAllocatorContext.hpp  SizeClassConfig.hpp  SizeClassPoolManager.hpp  ThreadHeap.hpp
include/lockfree/: LockFreeNode.hpp  LockFreeStack.hpp  atomic_intrinsics.hpp
include/mylib/: calculator.hpp
src/: CMakeLists.txt  SharedMemoryManager.cpp  calculator.cpp
src/EBRManager/: EBRManager.cpp  GarbageNode.cpp  LockFreeGarbageList.cpp  LockFreeSingleLinkedList.cpp  ThreadSlot.cpp  ThreadSlotManager.cpp
src/LockFreeStack/: HpRetiredManager.cpp  HpSlot.cpp  HpSlotManager.cpp  LockFreeStack.cpp
src/ShareMemory/: ShareMemoryRegion.cpp  ShmResourceManager.cpp  ShmSegment.cpp
src/Tool/: ShmMutexLock.cpp
src/gc_malloc/CentralHeap/: AlignedChunkAllocatorByMmap.cpp  CentralHeap.cpp  FreeChunkListCache.cpp  Shm2MBChunkAllocator.cpp  ShmChunkAllocator.cpp  ShmFreeChunkList.cpp  ShmMutexLock.cpp
src/gc_malloc/ThreadHeap/: Bitmap.cpp  BlockHeader.cpp  CentralHeapBootstrap.cpp  ManagedList.cpp  MemSubPool.cpp  MemSubPoolList.cpp  ProcessAllocatorContext.cpp  SizeClassConfig.cpp  SizeClassPoolManager.cpp  ThreadHeap.cpp
tests/: CMakeLists.txt  CentralHeap_gtest.cpp  CentralHeap_mproc_stress.cpp  CentralHeap_mproc_test.cpp  EBRManager_test.cpp  HpRetiredManager_test.cpp  HpSlotManager_test.cpp  LockFreeBoundedStack_test.cpp  LockFreeChain_test.cpp  LockFreeHashMap_test.cpp  LockFreeLinkedList_test.cpp  LockFreeQueue_test.cpp  LockFreeSkipList_test.cpp  LockFreeStack_Shmem_SingleThread.cpp  LockFreeStack_test.cpp  PolicyAllocator_Integration_test.cpp  SharedMemoryTestFixture.hpp  ShmMutexLock_gtest.cpp  SmallBlocks_mproc_2proc2th.cpp  TheadHeap_SmallBlocks_mproc_2proc2th.cpp  ThreadSlot_test.cpp  central_heap_worker.cpp  lock_free_reuse_stack_interface_test.cpp  skiplist_node_tests.cpp  test_calculator.cpp  test_sanity.cpp  thread_slot_manager_test.cpp
tests/fixtures/: ShmTestFixture.cpp  ShmTestFixture.hpp  ThreadHeapTestFixture.hpp
